fix(project): the items inside of `form-item` are not aligned vertically
Error:
- Adding the error message makes the text grow the height of the box where the `label` and the `input`/`textarea`/`select` are located.
So visually it looks like they are not vertically aligned right in the center.

Solution:
- Create the `form-item__inner` to wrapper the `form-label` and `form-field`.
- Add the `position: relative` css property to `form-item__inner` instead `form__item`.

--- a/assets/scss/components/_components-form.scss
+++ b/assets/scss/components/_components-form.scss
@@ -50,7 +50,6 @@
 	&__item {
 		display: flex;
 		flex-direction: column;
-		position: relative;
 
 		&:not(:last-child) {
 			margin-bottom: 1.9rem;
